--- a/src/index.css
+++ b/src/index.css
@@ -14,5 +14,9 @@ body{
 .header{
   padding:10px;
   margin-bottom: 10px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
+
 
